Added Entity Framework and Scoffolded

--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDBConnection": "Server=AURBLRLT-353\\MSSQLSERVER2019;Database=BookStoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
