--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -20,5 +20,10 @@
       }
     ]
   },
+  "JwtSettings": {
+    "Issuer": "BookStoreAPI",
+    "Audience": "BookStoreAPIClient",
+    "Duration": 1
+  },
   "AllowedHosts": "*"
 }
